# SearchProject

./: Free-to-play games  docker-compose.yml  index.html  main.py  pyproject.toml
db/: connection.py
searchproject/: api.py
templates/: base.html  index.html  search.html  show_data.html
