[tool.poetry]
name = "searchproject"
version = "0.1.0"
description = ""
authors = ["desert71 <amkazennov99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
redis = "^5.0.6"
uvicorn = "^0.30.1"
pandas = "^2.2.2"
kaggle = "^1.6.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
